2008-04-24  Mark Rowe  <mrowe@apple.com>

        Reviewed by Sam Weinig.

        Remove code for calculating the glyph cache size.

        * WebCore.base.exp: Remove unused symbol.
        * platform/graphics/mac/FontCacheMac.mm: Remove code that is unused now that we do not compute the glyph cache size.
        * platform/mac/WebCoreSystemInterface.h: Remove unused symbol.
        * platform/mac/WebCoreSystemInterface.mm: Ditto.

2008-04-24  Mark Rowe  <mrowe@apple.com>

        Reviewed by Sam Weinig.

        Add a definition of BUILDING_ON_LEOPARD to complement BUILDING_ON_TIGER.

        * WebCorePrefix.h:

2008-04-24  Cameron McCormack  <cam@mcc.id.au>

        Reviewed by Maciej Stachowiak.

        Ensure that changes to rx="" and ry="" attributes on an SVG <rect>
        element cause a relayout.

        Test: svg/dom/SVGRectElement/rect-modify-rx.svg

        * svg/SVGRectElement.cpp:
        (WebCore::SVGRectElement::svgAttributeChanged): Call needsLayout()
        when the attribute is rx or ry.
        (WebCore::SVGRectElement::hasRelativeValues): Return true when the
        attribute is rx or ry, since they also can have relative values.

2008-04-24  Adam Barth  <hk9565@gmail.com>

        Reviewed by Sam Weinig.

        Update the XMLHttpRequest header black list to match the spec.

        * xml/XMLHttpRequest.cpp:
        (WebCore::isSafeRequestHeader):

2008-04-22  Feng Qian  <ian.eng.webkit@gmail.com>

        Reviewed by Geoff Garen.

        Fix https://bugs.webkit.org/show_bug.cgi?id=18677
        Bug 18677: Synchronous event dispatch confuses the popup blocker into incorrectly blocking chat popups in gmail.com.

        Test: fast/events/nested-window-event.html

        * bindings/js/kjs_events.cpp:
        (WebCore::JSAbstractEventListener::handleEvent): Save and restore the current event around the event dispatch.

2008-04-24  Brady Eidson  <beidson@apple.com>

        Reviewed by Teh Mitzpettel
